--- a/.env.testing
+++ b/.env.testing
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OPEN_FOOD_FILES_URL="https://challenges.coode.sh/food/data/json/index.txt"
+OPEN_FOOD_CONTENT_URL="https://challenges.coode.sh/food/data/json/"
